부산대_BE 이가현 4주차 과제 (3단계) (#362)
* feat: 기본 코드 준비

* feat: 예외처리

controller에서 service로 이동

* feat: pageable 수정

pageable 객체 -> 필요한 값

* feat: category 추가

* feat: option 추가

* feat: 예외 처리

* feat: sort 관련

* feat: key 보호

* feat: 옵션 수량 차감

* feat: 3차 피드백 수정

exception 처리 + direction enum으로 받기

---------

Co-authored-by: Gahyeon Lee <best11gh@naeileun.dev>